--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="favicon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
@@ -18,7 +19,7 @@
         margin: 0;
       }
     </style>
-    <title>React App</title>
+    <title>Youtube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
