--- a/client/public/index.html
+++ b/client/public/index.html
@@ -19,7 +19,7 @@
         margin: 0;
       }
     </style>
-    <title>Youtube</title>
+    <title>YouTube</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
